fixes side scrolling when buttons expand on mobile

--- a/styles/maintest.css
+++ b/styles/maintest.css
@@ -74,7 +74,7 @@ img {
   width: 8.5em;
   /* em*16=pixels */
   flex: 1;
-  margin: 25px;
+  margin: 23px;
 }
 
 .content .front {
